Fix unavailable `List.of` calls